web-infras/parser/tests/fixtures/babel/es2022/class-private-properties/super-private-member-access/output.txt
[SyntaxError]: 'super' can only be used with function calls (i.e. super()) or in property accesses (i.e. super.prop or super[prop]. (5,10)
5|    super?.a;
 |        ^
